; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_color_utils.c_avpriv_get_gamma_from_trc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_color_utils.c_avpriv_get_gamma_from_trc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @avpriv_get_gamma_from_trc(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca double, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %9 [
    i32 134, label %5
    i32 129, label %5
    i32 128, label %5
    i32 137, label %5
    i32 136, label %5
    i32 135, label %5
    i32 133, label %6
    i32 131, label %6
    i32 132, label %7
    i32 130, label %8
  ]

5:                                                ; preds = %1, %1, %1, %1, %1, %1
  store double 1.961000e+00, double* %3, align 8
  br label %10

6:                                                ; preds = %1, %1
  store double 2.200000e+00, double* %3, align 8
  br label %10

7:                                                ; preds = %1
  store double 2.800000e+00, double* %3, align 8
  br label %10

8:                                                ; preds = %1
  store double 1.000000e+00, double* %3, align 8
  br label %10

9:                                                ; preds = %1
  store double 0.000000e+00, double* %3, align 8
  br label %10

10:                                               ; preds = %9, %8, %7, %6, %5
  %11 = load double, double* %3, align 8
  ret double %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
